--- a/index.html
+++ b/index.html
@@ -950,8 +950,7 @@
           class="max-w-6xl mx-auto px-4 py-3 flex flex-col sm:flex-row items-center justify-between gap-2"
         >
           <p>
-            Experiência fictícia para montar presentes com flores e cartões
-            românticos.
+            Serviço independente para montar presentes com flores e cartões românticos enviados por link.
           </p>
           <p class="text-slate-400">
             Dica: salve este link nos favoritos e reaproveite sempre que quiser
